--- a/data/page4.html
+++ b/data/page4.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -107,7 +108,8 @@
       <label for=second>S:</label>
       <input type="number" name="second" id="second" min="0" max="59" value="0">
       <div class="d-grid gap-2 mt-2">
-        <input type="button" class="btn btn-warning btn-block " value="Añadir horario" onclick="clock.addAlarm">
+        <input type="button" class="btn btn-warning btn-block " id = "encendido" value="Hora de Encendido" onclick="mostrar()">
+        <input type="button" class="btn btn-warning btn-block " id="Apagado" value="Hora de Apagado" onclick = "mostrar()">
       </div>
     </form>
   </div>  
@@ -240,6 +242,15 @@
       const clock = new Clock;
       clock.init();
     </script>
+    <script>
+      function mostrar(){
+        const x = getElement("hour").value;
+        const y = getElement("minute").value;
+        const z = getElement("second").value;
+        swal('La hora que introdujo es: '+x+':'+y+':'+z);
+      }
+    </script>
     <script src="script.js"></script>
+
 </body>
 </html>
