--- a/data/index.html
+++ b/data/index.html
@@ -83,7 +83,7 @@
     <div class="container c_infoLampara">
         <h5 class="titulo">Estado de la Lámpara</h5>
          <br>
-            <div class="label" onclick="imprimir()">
+            <div class="label" onclick="sendAction1(1)">
               <input type="checkbox"/>
               <span class="btn-real-sw"></span>
               <i id="pulsador-button" class="fa fa-power-off"></i>
@@ -107,13 +107,14 @@
             </thead>
             <tbody>
               <tr>
-                <th>192.168.100.2</th>
-                <td>LOLIPOP</td>
-                <td>GOOD</td>
-                <td>14:2131.123.12.31.231</td>
-                <td>1asndo</td>
-                <td>Mark</td>
-                <td>Otto</td> 
+               
+                <th id="ip"> </th>
+                <td id="hn"> </td>
+                <td id="st"> </td>
+                <td id="ss"> </td>
+                <td id="ps"> </td>
+                <td id="bs"> </td>
+                <td id="rs"> </td> 
               </tr>
                
             </tbody>
@@ -144,7 +145,9 @@
         <i class="fa-regular fa-copyright"></i>  Derechos Reservados
       </p>
     </div>
-
+    <script>
+      var pageCurrent = 1;
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
