--- a/data/page5.html
+++ b/data/page5.html
@@ -75,7 +75,7 @@
     <div class="container c_infoLampara">
         <h5 class="titulo">Estado de la Lámpara</h5>
          <br>
-            <div class="label" onclick="imprimir()">
+            <div class="label" onclick="sendAction1(4)">
               <input type="checkbox"/>
               <span class="btn-real-sw"></span>
               <i id="pulsador-button" class="fa fa-power-off"></i>
@@ -84,7 +84,7 @@
     <br>
     <br>
     <div class="slider">
-      <input type="range" min="0" max="100" value="50"   oninput="rangeValue.innerText = this.value">
+      <input type="range" id="ldrlimit" min="0" max="100" value="50"   oninput="rangeValue.innerText = this.value" onchange="sendLimitLDR(4)">
       <p id="rangeValue">50</p> %
   </div>
   <br>
@@ -92,7 +92,7 @@
 
     <br>
     <div class="container valores_pwm">
-        Valor de LDR limite <p id="pwm_value">789</p>
+        Valor de LDR limite <p id="ldrlimval">789</p>
     </div>
     <br>
 
@@ -117,13 +117,13 @@
             </thead>
             <tbody>
               <tr>
-                <th>192.168.100.2</th>
-                <td>LOLIPOP</td>
-                <td>GOOD</td>
-                <td>14:2131.123.12.31.231</td>
-                <td>1asndo</td>
-                <td>Mark</td>
-                <td>Otto</td> 
+                <th id="ip"> </th>
+                <td id="hn"> </td>
+                <td id="st"> </td>
+                <td id="ss"> </td>
+                <td id="ps"> </td>
+                <td id="bs"> </td>
+                <td id="rs"> </td> 
               </tr>
                
             </tbody>
@@ -154,7 +154,9 @@
         <i class="fa-regular fa-copyright"></i>  Derechos Reservados
       </p>
     </div>
-
+    <script>
+      var pageCurrent = 4;
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
